# VibeVoice-Large-Q8-Colab

./: LICENSE  README.md  __init__.py  pyproject.toml  requirements.txt  vibevoice_gradio_inference.ipynb  vibevoice_standalone_inference.ipynb
examples/: Multiple-Speaker.json  Pause-Tag.json  Single-Speaker.json  VibeVoice-Unload-Memory.json
nodes/: __init__.py  base_vibevoice.py  lora_node.py  multi_speaker_node.py  single_speaker_node.py
vvembed/: README.md
vvembed/modular/: configuration_vibevoice.py  modeling_vibevoice.py  modeling_vibevoice_inference.py
vvembed/processor/: vibevoice_processor.py
